@@ -4,6 +4,7 @@
 
 == ruote-couch 2.1.11    not yet released
 
+- get_many(x, y, :count => true) support
 - a database.purge! that can't be mislead by cache issues
 
 
